--- a/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.ViewModels/Randomizer.Framework.ViewModels.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EnigmatiKreations.Framework.MVVM" Version="1.0.0-pre-alpha.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Randomizer.Framework.Models\Randomizer.Framework.Models.csproj" />
     <ProjectReference Include="..\Randomizer.Framework.Persistence\Randomizer.Framework.Persistence.csproj" />
     <ProjectReference Include="..\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj" />
