--- a/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
+++ b/App/Targets/Randomizer.iOS/Randomizer.iOS.csproj
@@ -198,6 +198,12 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="EnigmatiKreations.Framework.Controls">
+      <Version>1.0.0-pre-alpha.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="EnigmatiKreations.Framework.MVVM">
+      <Version>1.0.0-pre-alpha.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms.DebugRainbows">
