--- a/Controls Gallery/ControlsGallery/ControlsGallery.iOS/ControlsGallery.iOS.csproj
+++ b/Controls Gallery/ControlsGallery/ControlsGallery.iOS/ControlsGallery.iOS.csproj
@@ -123,6 +123,12 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="EnigmatiKreations.Framework.Controls">
+      <Version>1.0.0-pre-alpha.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="EnigmatiKreations.Framework.MVVM">
+      <Version>1.0.0-pre-alpha.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Forms9Patch">
       <Version>2.4.9</Version>
     </PackageReference>
