--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Models/Randomizer.Framework.Models.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Models/Randomizer.Framework.Models.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EnigmatiKreations.Framework.Controls" Version="1.0.0-pre-alpha.1.1" />
+    <PackageReference Include="EnigmatiKreations.Framework.Managers" Version="1.0.0-pre-alpha.1.1" />
+    <PackageReference Include="EnigmatiKreations.Framework.MVVM" Version="1.0.0-pre-alpha.1.1" />
+  </ItemGroup>
+
 </Project>
