--- a/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
+++ b/Libraries/Randomizer.Framework/Randomizer.Framework.Services/Randomizer.Framework.Services.csproj
@@ -51,7 +51,9 @@
 
     <!-- This None is here so the conditionally included files show up in the Solution Explorer -->
     <None Include="**\*.cs;**\*.xml;**\*.axml;**\*.png" Exclude="bin\**\*.*;bin;obj\**\*.*;obj;" />
-
+    <PackageReference Include="EnigmatiKreations.Framework.MVVM" Version="1.0.0-pre-alpha.1.1" />
+    <PackageReference Include="EnigmatiKreations.Framework.Controls" Version="1.0.0-pre-alpha.1.1" />
+    
     <!--NuGet packages for all platforms-->
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
 
