--- a/Tests/Randomizer.Tests.Integration/Randomizer.Tests.Integration.PageViewModels/Randomizer.Tests.Integration.PageViewModels.csproj
+++ b/Tests/Randomizer.Tests.Integration/Randomizer.Tests.Integration.PageViewModels/Randomizer.Tests.Integration.PageViewModels.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EnigmatiKreations.Framework.MVVM" Version="1.0.0-pre-alpha.1.1" />
     <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
